--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <include src="./partials/about.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/reviews.html"></include>
-    <include src="./partials/locations.html"></include>
+    <include src="./partials/location.html"></include>
     <include src="./partials/footer.html"></include>
   </body>
 </html>
