--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
     <include src="./partials/reviews.html"></include>
     <include src="./partials/location.html"></include>
     <include src="./partials/footer.html"></include>
-    <include src="./partials/modal.html"> </include>
+    <include src="./partials/modalAbout.html"> </include>
+    <include src="./partials/modalLocation.html"> </include>
   </body>
 </html>
